--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-:host {
+/* :host {
   --content-padding: 10px;
 }
 header {
@@ -9,4 +9,4 @@ header {
 }
 .content {
   padding: var(--content-padding);
-}
+} */
